Video Resume Added

--- a/css/skins/color.css
+++ b/css/skins/color.css
@@ -30,6 +30,7 @@
 .about .about-content .timeline .timeline-item::before,
 .about .about-content .skills .skill-item .progress .progress-in,
 .btn,
+.btn1,
 .section-title svg text::before,
 .section-title svg text::after,
 .aside .nav-toggler span,
