Education and experience

--- a/css/style.css
+++ b/css/style.css
@@ -267,12 +267,21 @@ body,html{
     height: 100%;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 11;
     border-right: 1px solid #e8dfec;
-    padding: 30px;
-    overflow-y: auto;
+/*    padding: 30px;*/
+/*    overflow-y: auto;*/
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
+}
+.aside .aside-inner{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    overflow-y: auto;
 }
 .aside .logo{
     padding: 30px 0;
@@ -412,7 +421,6 @@ body,html{
     min-height: 100vh; 
     display: -ms-flexbox;
     display: flex;
-/*    background-image: url("/images/home/3.png");*/
 }
 .home .intro{
     text-align: center;
@@ -506,7 +514,6 @@ body,html{
 }
 */
 
-/*
 .home .intro h1{
     font-size: 35px;
     color: #302e4d;
@@ -515,7 +522,7 @@ body,html{
     margin: 20px 0 5px;
     position: relative;
 }
-*/
+/*
 .home .intro h1{
     text-align: center;
     content: '';
@@ -528,9 +535,9 @@ body,html{
     font-weight: 700;
     margin: 20px 0 5px;
     position: relative;
-/*    border-right: 2px solid #302e4d;*/
+    border-right: 2px solid #302e4d;
     width: 21ch;
-     margin-left:300px;
+    margin-left:300px;
     
 }
 @keyframes type{
@@ -542,6 +549,8 @@ body,html{
         width: 21ch;
     }
 }
+*/
+/*
 .home .intro p{
     font-size: 24px;
     font-weight: 500;
@@ -549,6 +558,8 @@ body,html{
     line-height: 22px;
     color: #504e70;
 }
+*/
+
 .home .intro social-links{
     margin-top: 30px;
 }
@@ -765,16 +776,16 @@ body,html{
 }
 
 .about .about-content .education{
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
     margin-top: 30px;
     font-family: 'Roboto Slab', serif;
 }
 .about .about-content .experience{
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
     margin-top: 30px;
     font-family: 'Roboto Slab', serif;
 }
@@ -926,6 +937,7 @@ body,html{
     margin-top: 60px;
 }
 .service .card-wrapper .card{
+    width: 100%;
     background-color:  aliceblue;
     padding: 3rem  2rem;
     position: relative;
@@ -1025,10 +1037,11 @@ body,html{
     border: none;
     background-color: transparent;
     font-size: 23px;
-    font-weight: 750;
+    font-weight: 500;
     text-transform: capitalize;
     margin: 0 15px;
     color: #302e4d;
+    font-family: 'Roboto Slab', serif;
     cursor: pointer;
     border-bottom: 3.5px solid transparent;
     white-space: nowrap;
@@ -1355,6 +1368,7 @@ body,html{
         transform: scale(1);
     }
 }
+/*
 .lightbox .lightbox-content .lightbox-close{
     position: absolute;
     height: 40px;
@@ -1366,6 +1380,7 @@ body,html{
     color: aliceblue;
     line-height: 40px;
 }
+*/
 .lightbox .lightbox-content .lightbox-caption{
     position: absolute;
     bottom: 0;
@@ -1435,6 +1450,8 @@ body,html{
     border-radius: 10px;
     overflow: hidden;
     border: 1px solid #d4d4e3;
+    width: 100%;
+     background-color: aliceblue;
 }
 .blog .blog-item-inner .blog-img{
     position: relative;
@@ -1468,7 +1485,6 @@ body,html{
 }
 .blog .blog-item-inner .blog-info{
     padding: 30px 15px;
-    background-color: aliceblue;
 }
 
 .blog .blog-item-inner .blog-info .blog-title a{
@@ -1601,7 +1617,7 @@ body,html{
         left: 30px;
     }
     .aside .nav-toggler.open{
-        left: 300px;
+        left: 200px;
     }
     .aside{
         left: -270px;
