Button, experience Updated

--- a/css/skins/color.css
+++ b/css/skins/color.css
@@ -31,6 +31,7 @@
 .about .about-content .skills .skill-item .progress .progress-in,
 .btn,
 .btn1,
+.btn2,
 .section-title svg text::before,
 .section-title svg text::after,
 .aside .nav-toggler span,
