--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ body,html{
     -webkit-box-shadow: 0 0 20px rgba(48,46,77,0.50);
     box-shadow: 0 0 20px rgba(48,46,77,0.50);
 }
-.btn,.btn1{
+.btn,.btn1,.btn2{
     font-size: 16px;
     font-family: 'Oleo Script', serif;
     font-weight: 500;
@@ -189,6 +189,10 @@ body,html{
     transform: scale(1.05);
 }
 .btn1:hover{
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+}
+.btn2:hover{
     -webkit-transform: scale(1.05);
     transform: scale(1.05);
 }
@@ -726,6 +730,10 @@ body,html{
 }
 .about .about-content .personal-info .buttons .btn1{
     margin-right: 30px;
+    margin-top: 10px;
+}
+.about .about-content .personal-info .buttons .btn2{
+    margin-right: 60px;
     margin-top: 10px;
 }
 .about .about-content .skills{
