Logo added section added

--- a/css/style.css
+++ b/css/style.css
@@ -308,9 +308,6 @@ body,html{
     position: relative;
     padding: 0 10px;
     line-height: 50px;
-    border-radius: 10px;
-    -webkit-box-shadow: 0 0 20px rgba(48,46,77,0.30);
-    box-shadow: 0 0 20px rgba(48,46,77,0.30);
 }
 .aside .logo a::before{
     content: '';
@@ -603,8 +600,19 @@ body,html{
      -webkit-transform: scale(1.15);
     transform: scale(1.15);
 }
+.fa-github {
+    background: #32CD32;
+    color: white;
+      margin: 20px 2px;
+      -webkit-box-shadow: 0 0 20px rgba(48,46,77,0.30);
+      box-shadow: 0 0 20px rgba(48,46,77,0.30);
+  }
+  .fa-github:hover{
+       -webkit-transform: scale(1.15);
+      transform: scale(1.15);
+  }
 .fa-instagram {
-  background: #125688;
+  background: #E1306C;
   color: white;
     margin: 20px 2px;
     -webkit-box-shadow: 0 0 20px rgba(48,46,77,0.30);
@@ -869,7 +877,21 @@ body,html{
     margin: 0;
      font-family: 'Roboto Slab', serif;
 }
-
+/* publication section */
+.publication .publication-item ul li a{
+    text-align: left;
+    font-size: 18px;
+    font-weight: 500;
+    color: #504e70;
+}
+.publication .publication-item:hover{
+    color: #00BFA5;
+}
+.publication .publication-item ul li a:hover{
+    color: #00BFA5;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
 /*Service Section*/
 .service .container{
     padding-bottom: 40px;
@@ -892,30 +914,6 @@ body,html{
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
-/*.service .service-item .service-item-inner:hover{
-    -webkit-box-shadow: 0 0 20px rgba(48,46,77,0.5);
-    box-shadow: 0 0 20px rgba(48,46,77,0.5);
-}
-.service .service-item .service-item-inner .icon{
-    height: 60px;
-    width: 60px;
-    display: block;
-    margin: 0 auto 30px;
-    text-align: center;
-    border-radius: 50%;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-.service .service-item .service-item-inner .icon .fa{
-    font-size: 50px;
-    line-height: 40px;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-.service .service-item .service-item-inner:hover .icon .fa{
-    font-size: 25px;
-    color:#ffffff;
-}*/
 
 
 /*My creativity*/
